Refactor and generate docs for auth
